--- a/Multilingual-Language-Classifier.ipynb
+++ b/Multilingual-Language-Classifier.ipynb
@@ -17,10 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e8bdbee9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\IIT M\\Interview_Prep\\Project\\Multilingual_Language_Classifier\\myenv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -32,6 +41,42 @@
     "from sklearn.decomposition import TruncatedSVD\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis, QuadraticDiscriminantAnalysis\n",
     "from sklearn.metrics import classification_report, accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7ed2ec9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`trust_remote_code` is not supported anymore.\n",
+      "Please check that the Hugging Face dataset 'qanastek/MASSIVE' isn't based on a loading script and remove `trust_remote_code`.\n",
+      "If the dataset is based on a loading script, please ask the dataset author to remove it and convert it to a standard format like Parquet.\n",
+      "Using the latest cached version of the dataset since qanastek/MASSIVE couldn't be found on the Hugging Face Hub\n",
+      "Found the latest cached dataset configuration 'en-US' at C:\\Users\\singh\\.cache\\huggingface\\datasets\\qanastek___massive\\en-US\\1.0.0\\31cdffab94ac97bfe5a394b1e96344c96f0ad847e1d796c7562d8c8b449e22e6 (last modified on Sun Jun 15 19:19:13 2025).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset({\n",
+      "    features: ['id', 'locale', 'partition', 'scenario', 'intent', 'utt', 'annot_utt', 'tokens', 'ner_tags', 'worker_id', 'slot_method', 'judgments'],\n",
+      "    num_rows: 2974\n",
+      "})\n",
+      "{'id': '0', 'locale': 'en-US', 'partition': 'test', 'scenario': 9, 'intent': 55, 'utt': 'wake me up at five am this week', 'annot_utt': 'wake me up at [time : five am] [date : this week]', 'tokens': ['wake', 'me', 'up', 'at', 'five', 'am', 'this', 'week'], 'ner_tags': [0, 0, 0, 0, 60, 16, 7, 37], 'worker_id': '1', 'slot_method': {'slot': [], 'method': []}, 'judgments': {'worker_id': [], 'intent_score': [], 'slots_score': [], 'grammar_score': [], 'spelling_score': [], 'language_identification': []}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: Setup directory and languages\n",
+    "massive_dataset = load_dataset(\"qanastek/MASSIVE\", \"en-US\", split='test', trust_remote_code=True)\n",
+    "print(massive_dataset)\n",
+    "print(massive_dataset[0])"
    ]
   },
   {
@@ -427,7 +472,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -441,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
