--- a/Multilingual-Language-Classifier.ipynb
+++ b/Multilingual-Language-Classifier.ipynb
@@ -5,14 +5,22 @@
    "id": "4ec18d46",
    "metadata": {},
    "source": [
-    "# DA5401 Assignment 6: MASSIVE Dataset Language Classification\n",
-    "This notebook demonstrates language classification tasks using the MASSIVE multilingual dataset.\n",
-    "\n",
-    "Tasks Covered:\n",
-    "- Load and inspect the dataset\n",
-    "- Preprocess data from Roman-script locales\n",
-    "- Train Naive Bayes for language classification\n",
-    "- Train LDA/QDA for continent classification"
+    "# MASSIVE Dataset Language Classification\n",
+    "**This notebook demonstrates language classification tasks using the MASSIVE multilingual dataset.**\n",
+    " \n",
+    "DATASET_LINK :  https://huggingface.co/datasets/qanastek/MASSIVE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cf00b7c",
+   "metadata": {},
+   "source": [
+    "## Tasks Covered:\n",
+    "  - Load and inspect the dataset\n",
+    "  - Preprocess data from Roman-script locales\n",
+    "  - Train Naive Bayes for language classification\n",
+    "  - Train LDA/QDA for continent classification"
    ]
   },
   {
@@ -472,7 +480,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
