Updaye requirements.txt and setup.py

--- a/Multilingual-Language-Classifier.ipynb
+++ b/Multilingual-Language-Classifier.ipynb
@@ -16,7 +16,7 @@
    "id": "0cf00b7c",
    "metadata": {},
    "source": [
-    "## Tasks Covered:\n",
+    "Tasks Covered:\n",
     "  - Load and inspect the dataset\n",
     "  - Preprocess data from Roman-script locales\n",
     "  - Train Naive Bayes for language classification\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7ed2ec9e",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
    ],
    "source": [
     "# Step 1: Setup directory and languages\n",
-    "massive_dataset = load_dataset(\"qanastek/MASSIVE\", \"en-US\", split='test', trust_remote_code=True)\n",
+    "massive_dataset = load_dataset(\"qanastek/MASSIVE\", \"en-US\", split='test')\n",
     "print(massive_dataset)\n",
     "print(massive_dataset[0])"
    ]
@@ -474,8 +474,16 @@
    "source": [
     " # Uncomment the line below to test the saved models\n",
     "    # load_and_test_models()\n",
-    "# End of the script"
+    "# End of the script \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c86cbba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
