--- a/Multilingual-Language-Classifier.ipynb
+++ b/Multilingual-Language-Classifier.ipynb
@@ -28,20 +28,12 @@
    "execution_count": 2,
    "id": "e8bdbee9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\IIT M\\Interview_Prep\\Project\\Multilingual_Language_Classifier\\myenv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "from datasets import load_dataset\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -53,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7ed2ec9e",
    "metadata": {},
    "outputs": [
@@ -61,12 +53,39 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "`trust_remote_code` is not supported anymore.\n",
-      "Please check that the Hugging Face dataset 'qanastek/MASSIVE' isn't based on a loading script and remove `trust_remote_code`.\n",
-      "If the dataset is based on a loading script, please ask the dataset author to remove it and convert it to a standard format like Parquet.\n",
-      "Using the latest cached version of the dataset since qanastek/MASSIVE couldn't be found on the Hugging Face Hub\n",
-      "Found the latest cached dataset configuration 'en-US' at C:\\Users\\singh\\.cache\\huggingface\\datasets\\qanastek___massive\\en-US\\1.0.0\\31cdffab94ac97bfe5a394b1e96344c96f0ad847e1d796c7562d8c8b449e22e6 (last modified on Sun Jun 15 19:19:13 2025).\n"
+      "d:\\IIT M\\Interview_Prep\\Project\\Multilingual_Language_Classifier\\myenv\\lib\\site-packages\\datasets\\load.py:1486: FutureWarning: The repository for qanastek/MASSIVE contains custom code which must be executed to correctly load the dataset. You can inspect the repository content at https://hf.co/datasets/qanastek/MASSIVE\n",
+      "You can avoid this message in future by passing the argument `trust_remote_code=True`.\n",
+      "Passing `trust_remote_code=True` will be mandatory to load this dataset from the next major release of `datasets`.\n",
+      "  warnings.warn(\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "146a8f84b7f742ff8bd6cd1c083b3878",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading builder script: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "22e46ee8d94c462380a108af49ff368b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading readme: 0.00B [00:00, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
